Añadir varias recetas

--- a/entrantes/huevosrellenos.tex
+++ b/entrantes/huevosrellenos.tex
@@ -3,11 +3,13 @@
 \title{Huevos rellenos}
 \leftbgpic{entrantes/huevosrellenos}
 \begin{info}
- Raciones: 4 personas
+ Raciones: 4 personas \\
+ Tiempo de preparación: 30 minutos
 \end{info}
 \recipesection{Ingredientes}
+\dline
 \begin{ingredients}
- \item{9 huevos}
+ \item{8 huevos}
 \item{2 latas de bonito}
 \item{Aceite de girasol}
 \item{Sal}
@@ -15,13 +17,19 @@
 \item{1 pimiento morrón o de piquillo (opcional)}
 \end{ingredients}
 \recipesection{Realización}
+\dline
 \step{1.}{
-Cuece 8 huevos, cuando estén cocidos pártelos por la mitad y quítales la yema y apártalas.
- Con el otro huevo  y el aceite de girasol haz una mayonesa, coloca los medios huevos en
- una fuente y en un vaso de la batidora pos 6 yemas, agrega las dos latas de bonito
- desmenuzadas y un poco de tomate frito, de la mayonesa confeccionada echa dos o tres
- cucharadas y bátelo todo bien, rellena con esa mezcla los huevos, por encima una cucharadita
- de la mayonesa y las dos yemas de huevos espolvoreadas por encima. Si quieres corta un
- pimiento, para colocar un trozo sobre cada medio huevo para adornar.
+Cocer 8 huevos durante 10 minutos. Enfriar y pelar.
 }
-
+\step{2.}{
+Partir por la mitad y apartar las yemas.
+}
+\step {3.}{
+En un plato poner 6 yemas y reservar 2 para la covertura, el bonito y un poco de tomate frito.
+Aplastar con el tenedor hasta obtener una pasta homogenea para el relleno.
+}
+\step{4.}{
+Ir rellenando los huevos y colocarlos en una fuente. Cubrir los huevos con mahonesa. Rallar las yemas
+que habiamos reservado y espolvorearlas por encima de los huevos y añadir un trocito de pimiento del
+piquillo encima de cada huevo.
+}
