--- a/legumbres/lentejas.tex
+++ b/legumbres/lentejas.tex
@@ -1,15 +1,16 @@
-%revisar
 \subsection{Lentejas con chorizo}
 \title{Lentejas con chorizo}
-\leftbgpic{legumbres/lentejas}
+\leftbgpic{legumbres/lentejas2}
+\dline
 \begin{info}
- Tiempo de realización 1,5 horas \\
+ Tiempo de realización 2 horas \\
  Raciones; 6 personas
 \end{info}
 \recipesection{Ingedientes}
 \begin{ingredients}
  \item{400g de lentejas}
  \item{\nicefrac{1}{2} cebolla}
+ \item{1 patara grande}
  \item{1 zanahoria}
  \item{1 pimiento verde}
  \item{1 tomate}
@@ -20,11 +21,19 @@
  \item{200 g de chorizo (opcional)}
 \end{ingredients}
 \recipesection{Realización}
+\dline
 \step{1.}{
-Se pone todo en una cazuela (excepto las patatas) en crudo,
-se pone a cocer a fuego lento hasta que estén tiernas(1,5 horas
-aproximadamente)añadiendole agua fría siempre que haga falta,
-.Si se echan patatas, se echan cortadas en daditos pequeños 20
-minutos antes de terminar la cocción.Si quedan caldosas se le puede
+Se pone todo en una cazuela (excepto las patatas) en crudo.
+}
+\step{2.}{
+Dejar cocer las lentejas aproximadamente una hora
+se pone a cocer a fuego lento hasta que estén tiernas
+añadiendole agua fría siempre que haga falta.
+}
+\step{3.}{
+Echar las patatas cortadas en daditos y dejar aproximadamente otros 20 minutos.
+}
+\step{4.}{
+Si quedan caldosas se le puede
 añadir una cucharadita de pan rallado
 }
