--- a/main.tex
+++ b/main.tex
@@ -27,6 +27,7 @@
 \section{Cerdo}
 \input{Cerdo/costillas}
 \input{Cerdo/carrilleras}
+\input{Cerdo/chuletas_riojana}
 \section{Entrantes}
 \input{entrantes/alitaspollo}
 \input{entrantes/croquetasbacalao}
@@ -51,6 +52,7 @@
 \section{Platos únicos}
 \input{platosunicos/cocido}
 \input{platosunicos/patataschirlas}
+\input{platosunicos/patatascostillas}
 \input{platosunicos/arroz_bacalao}
 \section{Platos típicos}
 \input{platostipicos/migas}
