--- a/pasta/espaguetis.tex
+++ b/pasta/espaguetis.tex
@@ -1,30 +1,44 @@
-%revisar
 \subsection{Espaguetis con salsa boloñesa y queso mozzarella}
 \title{Espaguetis con salsa boloñesa y queso mozzarella}
 \leftbgpic{pasta/espaguetis}
+\dline
 \begin{info}
-Raciones: 5 personas
+Raciones: 5 personas \\
+Tiempo de preparación: 1 hora
 \end{info}
-
 \recipesection{Ingredientes}
 \begin{ingredients}
  \item{\nicefrac{1}{2} kg de espaguetis}
- \item{\nicefrac{1}{2} kg de carne picada}
+ \item{\nicefrac{1}{2} kg de carne picada previamente salpimentada}
  \item{1 cebolla}
  \item{2 ajos}
+ \item{1 zanahoría}
  \item{6 tomates maduros}
  \item{1 vasito de vino blanco}
+ \item{1 vasito de tomate frito}
  \item{Albaca}
  \item{100 g de queso mozzarella}
 \end{ingredients}
 \recipesection{Realización}
+\dline
 \step{1.}{
-Cuece la pasta según fabricante , para la salsa
-pica la cebolla menuda con los ajos , pochala en
-una sartén , cuando este  pochado agrega los
-tomates pelados , en trozos muy pequeño y la
-carne , dale una vueltas , agrega el vino blanco
-y la albaca , dale unas vueltas, tápalo y cuece
-lentamente durante 1,5 horas removiendo despacio
- .Sirve los espaguetis con la salsa y la mozzarella
+Cuece la pasta según fabricante
+}
+\step{2.}{
+Para la salsa bolognesa picar la cebolla menuda con los ajos y rallar la zanahoria.
+}
+\step{3.}{
+Pochalarlo en una sartén, cuando este pochado añadir los tomates y freir un poco.
+}
+\step{4.}{
+Añadir la carne y mover hasta que pierda el color rojizo.
+}
+\step{5.}{
+Añadir el vino blanco y dejar evaporar unos minutos y añadir tomate frito al gusto, aproximadamente un vaso.
+}
+\step{6.}{
+Dejar cocer media hora removiendo despacio.
+}
+\step{7.}{
+Sirve los espaguetis con la salsa y la mozzarella
 }
