--- a/verduras/Pimientos.tex
+++ b/verduras/Pimientos.tex
@@ -1,18 +1,20 @@
 %revisar
 \subsection{Pimientos rellenos}
 \title{Pimientos rellenos}
-\leftbgpic{verduras/pimientos}
+\leftbgpic{verduras/pimientosrellenos2}
 \begin{info}
-Raciones: ?? personas
+Raciones: 4 personas \\
+Tiempo de elaboración: 1h \\ 15 minutos
 \end{info}
 \recipesection{Ingredientes}
+\dline
 \begin{ingredients}
  \item{12 pimientos de piquillo}
  \item{\nicefrac{1}{2} cebolla}
  \item{3 tomates pelados}
  \item{1 pimiento verde pequeño}
  \item{2 ajos}
- \item{400g de bacalao desalado}
+ \item{400g de bacalao desalado o gambas}
  \item{60g de mantequilla}
  \item{60g de harina}
  \item{200g de nata}
@@ -23,13 +25,23 @@ Raciones: ?? personas
 \recipesection{Realización}
 \dline
 \step{1.}{
-Pocha la cebolla, conjuntamente
- con el pimiento verde y los ajos,
- cuando este blanda incorpora los
- tomates pelados y troceados. Sofríe
- a fuego lento hasta que este tierno.
- Agrega dos pimientos de piquillo en
- trozos y pasa el conjunto por la batidora, añadir
- la nata, batir y reservar para salsear
- los pimientos.
+Hacer una bechamel con 60g de mantiquilla, 60g de harina y medio litro de leche(Ver receta).
+}
+\step{2.}{
+Saltear el bacalao, las gambas o el relleno que se le quiera echar(Puerro, setas, ...).
+}
+\step{3.}{
+Añadir el relleno a la bechamel y remover.
+}
+\step{4.}{
+Para la salsa, pochar la cebolla, el ajo y el pimiento verde.
+Añadirle dos pimientos del piquillo partidos en trozos y un poco de oregano
+Una vez pochado añadir una copa de brandy. Reducir unos minutos y añadirle 5 cucharadas de tomate frito y la nata.
+}
+\step{5.} {
+Batir la salsa.
+}
+\dline
+\step{6.}{
+Rellenar los pimientos con la bechamel y cubrir con la salsa.
 }
