First official draft

--- a/Cerdo/costillas.tex
+++ b/Cerdo/costillas.tex
@@ -20,15 +20,18 @@
 \recipesection{Realización}
 
 \step{1.}{
-Machaca los ajos con el vino , el orégano y
-1 cucharadita de sal , adobada las costillas y
-dejas en reposo 1 hora , calienta el horno a 200ºC ,
-en la túrmix bate la coca cola , con el kétchup , la mostaza
-y la miel , echa un poco de esa salsa en las costillas
-(como 1/4 parte) , y ponlas en el horno caliente 3/4 de  hora ,
-sácalas y dales la vuelta , echa otra parte de la salsa y
-vuélvelas a introducir 20 minutos , sácalas , vuelve a darles
-la vuelta , incorpora la salsa restante y ponlas en el horno
- otros 20 o 25 minutos aproximadamente , hasta que estén
- tiernas y servir.
+Machaca los ajos con el vino, el orégano y
+1 cucharadita de sal.
+}
+\step{2.}{
+Adobada las costillas y
+dejalas en reposo 1 hora. Calienta el horno a 200ºC.
+}
+\step{3.}{
+En la túrmix bate la coca cola con el kétchup, la mostaza
+y la miel. Unta un poco de esa salsa en las costillas
+(como 1/4 parte) y ponlas en el horno caliente media hora.
+}
+\step{4.}{
+Dales la vuelta y echa más salsa cada 20 minutos hasta que lleve hora y media en el horno, aproximadamente.
 }
