--- a/Vacuno/Terneraasada.tex
+++ b/Vacuno/Terneraasada.tex
@@ -1,5 +1,5 @@
-\subsection{Rendondo de Ternera}
-\title{Rendondo de Ternera}
+\subsection{Redondo de Ternera}
+\title{Redondo de Ternera}
 \dline
 \leftbgpic{Vacuno/Redondo.jpg}
 \begin{info}
