--- a/entrantes/ensaladilla.tex
+++ b/entrantes/ensaladilla.tex
@@ -1,9 +1,10 @@
 %revisar
 \subsection{Ensaladilla rusa}
 \title{Ensaladilla rusa}
-\leftbgpic{entrantes/ensaladilla}
+\leftbgpic{entrantes/ensaladilla2}
 \begin{info}
- Raciones: 10 personas
+ Raciones: 5 ó 6 personas \\
+ Tiempo de elaboración: 45 minutos
 \end{info}
 \recipesection{Ingredientes}
 \begin{ingredients}
@@ -14,16 +15,28 @@
 \item{Un poco de limón}
 \item{\nicefrac{1}{2} kg de bonito en aceite}
 \item{100g de aceitunas sin hueso}
+\item{1 lata pequeña de Ppmiento morrón}
+\item{3 ó 4 zanahorias}
 \end{ingredients}
 \recipesection{Realización}
 \step{1.}{
 Cuece las patatas sin pelar junto con los 4 huevos y un poco de sal,
  pínchalas con un tenedor para saber cuándo están tiernas.
+ }
+ \step{2.}{
  Aparta y enfría, mientras enfría preparas una mayonesa con
- 1 huevo, el aceite, un poco  de sal y un poco de limón. Pela
- las patatas y córtalas en daditos pequeños , agrega el bonito
- desmenuzado , las aceitunas y 3 huevos de los cocidos partidos
- pequeños , agrega la mayonesa , remueve bien y adorna con el
- huevo que queda en rodajas finas , Enfriar y servir.
+ 1 huevo, el aceite, un poco  de sal y un poco de limón.
+ }
+ \step{3.}{
+ Pela las patatas y córtalas en daditos pequeños, agrega el bonito
+ desmenuzado, las aceitunas y 3 huevos de los cocidos partidos
+ pequeños.
+ }
+ \step{4.}{
+ Agrega la mayonesa, remueve bien y adorna con el huevo que queda en rodajas finas,
+ unas cuantas aceitunas y el pimiento morrón en tiras.
+ }
+ \step{5.}{ \newline
+ Enfriar y servir.
 }
 
