--- a/main.tex
+++ b/main.tex
@@ -22,6 +22,8 @@
 \pagestyle{recipe}
 \section{Aves}
 \input{Aves/polloasado}
+\input{Aves/pollopepitoria}
+\input{Aves/jamoncitospollo}
 \section{Caza}
 \input{Caza/conejotomate}
 \section{Cerdo}
@@ -30,6 +32,7 @@
 \input{Cerdo/chuletas_riojana}
 \section{Entrantes}
 \input{entrantes/alitaspollo}
+\input{entrantes/crema_esparragos}
 \input{entrantes/croquetasbacalao}
 \input{entrantes/ensaladilla}
 \input{entrantes/huevosrellenos}
@@ -49,6 +52,8 @@
 \input{pasta/espaguetis}
 \input{pasta/lasana}
 \input{pasta/lasanacarne}
+\section{Pescados}
+\input{pescados/atun_tomate}
 \section{Platos únicos}
 \input{platosunicos/cocido}
 \input{platosunicos/patataschirlas}
@@ -66,10 +71,13 @@
 \input{Vacuno/estofadobuey}
 \input{Vacuno/Terneraasada}
 \section{Verduras}
+\input{verduras/pastellesparagos}
 \input{verduras/Pimientos}
 \input{verduras/pistocastellano}
+\input{verduras/potajegarbanzos}
 \input{verduras/purrusalda}
 \input{verduras/berenjenas_rellenas}
 \input{verduras/calabacin_rebozado}
+\input{verduras/cremaesparragos}
 \clearpage
 \end{document}
