--- a/pasta/canelones.tex
+++ b/pasta/canelones.tex
@@ -22,16 +22,27 @@
  \item{Queso rallado para gratinar}
 \end{ingredients}
 \recipesection{Realización}
+\dline
 \step{1.}{
-Pocha la cebolla con los ajos incorporar la carne,
-el pate y el tomate , rehogarlo todo bien y pasarlo
- por la batidora y apartar, cocer la pasta en abundante
- agua y un chorrito de aceite para que no se pegue el
- tiempo que indique el fabricante , enfriar en agua fría
- y escurrir .Extender las placas sobre la mesa , rellenarlas
- con la farsa de la batidora colocar en una bandeja , untada
- con mantequilla y tomate frito . Hacer una bechamel con la
- mantequilla, la harina, la leche y la nuez moscada, cubrir los canelones y
- espolvorear el queso rallado y hornear durante 15-20minutos
- a 200º Grados
+Pocha la cebolla con los ajos, incorpora la carne,
+el pate y el tomate frito y rehogarlo.
+}
+\step{2.}{
+ Pasarlo por la batidora y reservar
+}
+\step{3.}{
+ Cocer la pasta en abundante
+ agua con sal y un chorrito de aceite para que no se pegue el
+ tiempo que indique el fabricante, enfriar en agua fría
+ y escurrir.
+ }
+ \step{4.}{
+ Extender las placas sobre la mesa, rellenarlas
+ con la farsa de la batidora y colocar en una bandeja untada
+ con mantequilla y tomate frito.
+ }
+ \step{5.}{
+ Hacer una bechamel con la
+ mantequilla, la harina, la leche y la nuez moscada. Cubrir los canelones y
+ espolvorear el queso rallado. Hornear durante 15-20 minutos a 200º Grados
 }
