--- a/pasta/ensaladapasta.tex
+++ b/pasta/ensaladapasta.tex
@@ -1,7 +1,6 @@
-%revisar
 \subsection{Ensalada de pasta}
 \title{Ensalada de pasta}
-\leftbgpic{pasta/ensaladapasta}
+\leftbgpic{pasta/ensaladapasta1}
 \begin{info}
 Raciones: 6 personas \\
 \end{info}
@@ -21,8 +20,10 @@ Raciones: 6 personas \\
 
 \step{1.}{
 Cuece la pasta en abundante agua con sal
-(Tiempo que marque el fabricante), enfriar,
-mezclas la pasta con los el resto de los ingredientes,
+(Tiempo que marque el fabricante), enfriar.
+}
+\step{2.}{
+Mezclas la pasta con los el resto de los ingredientes,
 mezclar bien y enfriar en el frigorífico, puedes añadir
  pasas de corinto.
 }
