--- a/pasta/lasana.tex
+++ b/pasta/lasana.tex
@@ -1,7 +1,7 @@
-%revisar
+
 \subsection{Lasaña de Jamón de York con Queso gratinada con Parmesano}
 \title{Lasaña de Jamón de York con Queso gratinada con Parmesano}
-\leftbgpic{pasta/lasana}
+\leftbgpic{pasta/lasana_jamon1}
 \begin{info}
  Raciones: 8 personas
 \end{info}
@@ -15,11 +15,17 @@
 \end{ingredients}
 \recipesection{Realización}
 
-\step{1.}{ Cocemos la pasta, ponemos una capa de tomate
+\step{1.}{
+Cocemos la pasta según fabricante. Escurrimos y dejamos secar en un paño limpio
+}
+\step{2.}{
+Ponemos una capa de tomate
 en la bandeja del horno, después ponemos una
-capa de Láminas de pasta, después una capa de
-lonchas de queso, otra capa de pasta, una capa
-de tomate, otra capa de jamón , se cubre todo
-con bechamel y se le echa queso parmesano, se
+capa de láminas de pasta, después una capa de
+lonchas de jamón y queso y untamos con tomate frito. Luego otra capa de pasta y volvemos a repetir el
+paso anterior y así hasta acabar las laminas.
+}
+\step{3.}{
+Cubrir con bechamel y queso parmesano. Se
 mete en el horno durante aproximadamente 20
-minutos a 190ºC}
+minutos a 190ºC hasta que este dorado}
