--- a/platosunicos/arroz_bacalao.tex
+++ b/platosunicos/arroz_bacalao.tex
@@ -1,5 +1,6 @@
 \subsection{Arroz con bacalao}
 \title{Arroz con bacalao}
+\leftbgpic{platosunicos/arroz_bacalao}
 \dline
 \begin{info}
  Raciones: 4 ó 5 personas \\
