--- a/platosunicos/patatascostillas.tex
+++ b/platosunicos/patatascostillas.tex
@@ -1,6 +1,7 @@
 \subsection{Patatas con costillas}
 \title{Patatas con costillas}
 \dline
+\leftbgpic{platosunicos/patatascostillas}
 \begin{info}
  Raciones: 5 personas \\
  Tiempo de preparación: 1 hora
