--- a/verduras/berenjenas_rellenas.tex
+++ b/verduras/berenjenas_rellenas.tex
@@ -1,5 +1,6 @@
 \subsection{Berenjenas Rellenas}
 \title{Berenjenas Rellenas}
+\leftbgpic{verduras/calabacin_relleno1}
 \dline
 \begin{info}
  Raciones: 6 personas \\
