--- a/verduras/pistocastellano.tex
+++ b/verduras/pistocastellano.tex
@@ -3,25 +3,31 @@
 \title{Pisto Castellano}
 \leftbgpic{verduras/pistocastellano}
 \begin{info}
- Raciones: ?? personas
+ Raciones: 4 ó 5 personas \\
+ Tiempo de elaboración: 1 hora
 \end{info}
 \recipesection{Ingredientes}
 \begin{ingredients}
  \item{1 kg de cebolla}
+ \item{3 ó 6 tomates triturados(rallados)}
  \item{1.5 kilos de calabacín}
- \item{\nicefrac{1}/{2} kg de pimientos}
+ \item{\nicefrac{1}{2} kg de pimientos}
  \item{3 ajos}
  \item{Perejil}
  \item{Aceite}
  \item{Sal}
 \end{ingredients}
 \recipesection{Realización}
+\dline
 \step{1.}{
-Pica la cebolla menuda y ponla en una sartén
-a freír con el pimiento cuando este un poco blanda
-añadir los ajos y el calabacín cortado en
-cuadritos pequeños, agrega el tomate también
- cortado pequeño, el perejil picado. Deja cocer
- tapado a fuego lento hasta que este tierno.
- Y servir
+Pica la cebolla menuda y ponla a pochar en una sartén, cuando
+esté casi se añade el pimiento y los ajos.
+}
+\step{2.}{
+Añadir el calabacín cortado en dados pequeños y remover.
+Dejar unos 5 ó 10 minutos y añadir el tomate.
+}
+\step{3.}{
+Rectificar de sal y dejar cocer hasta que el calabacín este tierno. Aproximadamente
+entre 20 minutos, media hora.
 }
