Primera ronda de revisión

--- a/Aves/polloasado.tex
+++ b/Aves/polloasado.tex
@@ -24,7 +24,7 @@ Precalentar el horno a 200ºC
 }
 \newline
 \step{2.}{
-Salpimentar el pollo y cortar las patatas en rodajas. Pasarlo todo a una fuente con la patatas de base y la piel hacia abajo.
+Salpimentar el pollo y cortar las patatas en rodajas. Pasarlo todo a una fuente con la patatas de base y el pollo con la piel hacia abajo.
 }
 \newline
 \step{3.}{
