--- a/Aves/pollopepitoria.tex
+++ b/Aves/pollopepitoria.tex
@@ -25,7 +25,7 @@ Tiempo de preparación: 1 hora
 Salpimentar el pollo, enharinar y sellarlo en una sarten y reservar.
 }
 \step{2.}{
-En el mismo aceite, pochaar la cebolla y 3 dientes de ajo. Una vez pochado, añadir una cucharadita de
+En el mismo aceite, pochar la cebolla y 3 dientes de ajo. Una vez pochado, añadir una cucharadita de
 harina, tostar un poquito y añadir un majado con las almendras, 1 ajo, vino blanco y perejil. Dejar evaporar
 un poco el vino, añadir el pollo y cubrir con agua y una pastilla de caldo de pollo.
 }
