--- a/Caza/conejotomate.tex
+++ b/Caza/conejotomate.tex
@@ -21,12 +21,17 @@ Raciones: 6 personas \\
 \recipesection{Realización}
 
 \step{1.}{
-Freír el conejo con sal y pimienta y reservar
-Para la salsa de tomate , picar la cebolla
- finita ponerla a pochar agregar los tomates
- partidos y pelados , la sal y el azúcar ,
- agregar el orégano , cuando este 1 hora
+Freír el conejo con sal y pimienta y reservar.
+}
+\step{2.}{
+Para la salsa de tomate, picar y pochar la cebolla
+ finita añadir los tomates
+ partidos y pelados, la sal y el azúcar,
+ el orégano , cuando este 1 hora
  aproximadamente agregar el vino y dejar
- ½ hora más , pasarlo por el pasapuré e
- incorporar conejo , dejarlo 10 minutos más y servir
+ ½ hora más.
+ }
+ \step{3.}{
+ Pasar la salsa por el pasapuré e
+ incorporar el conejo , dejarlo 10 minutos más y servir.
 }
