--- a/Cerdo/costillas.tex
+++ b/Cerdo/costillas.tex
@@ -24,7 +24,7 @@ Machaca los ajos con el vino, el orégano y
 1 cucharadita de sal.
 }
 \step{2.}{
-Adobada las costillas y
+Adoba las costillas y
 dejalas en reposo 1 hora. Calienta el horno a 200ºC.
 }
 \step{3.}{
