--- a/Salsas/bechamel.tex
+++ b/Salsas/bechamel.tex
@@ -1,6 +1,7 @@
 %revisar
 \subsection{Salsa Bechamel}
 \title{Salsa Bechamel}
+\newline
 \recipesection{Ingredientes}
 \begin{ingredients}
 \item{90g de harina}
@@ -11,9 +12,14 @@
 \end{ingredients}
 \recipesection{Realización}
 \step{1.}{
-Pon la mantequilla en una cazuela añade la sal y la nuez moscada
- , cuando esta derretida agregar la harina removiendo con una cuchara
- de madera o con una varilla, agregar la leche caliente, sin dejar de
- remover con el fuego lento y mantener la cocción a fuego lento sin
+Pon la mantequilla en una cazuela, cuando esta derretida agregar la harina
+ e ir removiendo con una cuchara de madera o con una varilla para que se dore un poco.
+}
+\step{2.}{Agregar la leche caliente poco a poco y sin dejar de
+ remover con el fuego lento y mantener la cocción sin
  que hierva.
+ }
+ \step{3.}{
+ Añadir la sal y la nuez moscada y dejar cocer hasta que alcance la textura
+ adecuada
 }
