--- a/Vacuno/estofadobuey.tex
+++ b/Vacuno/estofadobuey.tex
@@ -21,12 +21,17 @@ Tiempo: ?
 \end{ingredients}
 \recipesection{Realización}
 \step{1.}{
-Corta las verduras y ponlas a pochar en aceite
-, corta la carne en trozos  e incorpórala a las
+Corta las verduras y ponlas a pochar en aceite.
+}
+\step{2.}{
+Corta la carne en trozos  e incorpórala a las
  verduras , rehoga durante 10 minutos y cúbrela
- con el vino tinto , ponlo a cocer lentamente
+ con el vino tinto.
+ }
+ \step{3.}{
+ Ponlo a cocer lentamente
  durante 2 horas aproximadamente , añadiendo
- agua si lo necesita, comprueba que este tierna
+ agua si lo necesita. Comprueba que este tierna
  y si es necesario cuece un poco más sin dejar
  que se seque. Añade 0,5 kilos de patatas
  (opcional) y deja cocer 1/4 de hora más y servir.
