--- a/entrantes/alitaspollo.tex
+++ b/entrantes/alitaspollo.tex
@@ -17,10 +17,12 @@
 
 \step{1.}{
 Freír las alas hasta que estén
-doradas y reservar en ese aceite
-se fríen los ajos cuando empiecen a
-dorarse se aparta la sartén y se agrega
-el vino con el vinagre se vuelve a poner
-en el fuego se incorporan las alas. Y las
-dejas dos o tres minutos más.
+doradas y reservar.}
+\step{2.}{
+En ese aceite se fríen los ajos y cuando empiecen a
+dorarse se aparta la sartén del fuego.}
+\step{3.}{
+Agregamos
+el vino con el vinagre y se vuelve a poner
+en el fuego e incorporamos las alitas. Dejamos hervir tres minutos más.
 }
