--- a/entrantes/croquetasbacalao.tex
+++ b/entrantes/croquetasbacalao.tex
@@ -20,11 +20,20 @@
 \step{1.}{
 Poner el bacalao a hervir con un poco de agua ,
 cuando empiece a hervir apartas enseguida , dejar
-enfriar, desmenuzarlo y limpiarlo de espinas , picarlo
-finito y reservar , en una sartén poner la mantequilla a
-derretir y agregar la harina sin dejar de remover incorporar
- la leche caliente , agregar el bacalao , removiendo durante
- 15 minutos aproximadamente , extender la masa en una fuente
- y enfriar , formar las croquetas , pásalas por huevo y pan
+enfriar.}
+\step{2.}{
+Limpiarlo de espinas y desmenuzarlo. Picarlo
+finito y reservar.
+}
+\step{3.}{
+En una sartén poner la mantequilla a derretir y agregar la harina.
+Y sin dejar de remover incorporar la leche caliente y remover hasta que
+se haga una bechamel e incorporar bacalao.
+}
+\step{4.}{
+Extender la masa en una fuente y dejar enfriar.
+}
+\step{5.}{
+Formar las croquetas, pásalas por huevo y pan
  rallado , freír en aceite fuerte y servir
 }
