--- a/entrantes/ensaladilla.tex
+++ b/entrantes/ensaladilla.tex
@@ -28,15 +28,18 @@ Cuece las patatas sin pelar junto con los 4 huevos y un poco de sal,
  1 huevo, el aceite, un poco  de sal y un poco de limón.
  }
  \step{3.}{
- Pela las patatas y córtalas en daditos pequeños, agrega el bonito
- desmenuzado, las aceitunas y 3 huevos de los cocidos partidos
- pequeños.
+ Cocer las zanahorias cortadas en dados y escurrir.
  }
  \step{4.}{
+ Pela las patatas y córtalas en daditos pequeños, agrega el bonito
+ desmenuzado, las aceitunas y 3 huevos de los cocidos partidos
+ pequeños  y las zanahorias.
+ }
+ \step{5.}{
  Agrega la mayonesa, remueve bien y adorna con el huevo que queda en rodajas finas,
  unas cuantas aceitunas y el pimiento morrón en tiras.
  }
- \step{5.}{ \newline
+ \step{6.}{ \newline
  Enfriar y servir.
 }
 
