--- a/entrantes/salmorejo.tex
+++ b/entrantes/salmorejo.tex
@@ -19,11 +19,21 @@
 \recipesection{Realización}
 
 \step{1.}{
-Emulsiona el aceite con los ajos usando la batidora,
-échalo a un cuenco, tritura los tomates y pásalos
- por el chino y júntalo con el aceite, remoja el pan
- con agua, bátelo bien por la batidora y pásalo por chino,
- incorporándolo todo a la cazuela, echa sal al gusto,
+Emulsiona el aceite con los ajos usando la batidora.
+Échalo a un cuenco
+}
+\step{2.}{Tritura los tomates, pásalos
+ por el chino y júntalo con el aceite.
+}
+\step{3.}{
+ Remoja el pan
+ con agua, bátelo bien por la batidora y pásalo por chino.
+ }
+ \step{4.}{
+ Incorporándolo todo a la cazuela, echa sal al gusto,
  bátelo bien y ponlo a enfriar.
-La guarnición se la  sirve cada comensal en su taza }
+ }
+ \step{5.}{
+La guarnición se la  sirve cada comensal en su taza.
+}
 
