--- a/legumbres/lentejas.tex
+++ b/legumbres/lentejas.tex
@@ -26,8 +26,8 @@
 Se pone todo en una cazuela (excepto las patatas) en crudo.
 }
 \step{2.}{
-Dejar cocer las lentejas aproximadamente una hora
-se pone a cocer a fuego lento hasta que estén tiernas
+Dejar cocer las lentejas aproximadamente una hora.
+Se pone a cocer a fuego lento hasta que estén tiernas
 añadiendole agua fría siempre que haga falta.
 }
 \step{3.}{
