--- a/pasta/espaguetis.tex
+++ b/pasta/espaguetis.tex
@@ -25,7 +25,7 @@ Tiempo de preparación: 1 hora
 Cuece la pasta según fabricante
 }
 \step{2.}{
-Para la salsa bolognesa picar la cebolla menuda con los ajos y rallar la zanahoria.
+Para la salsa bolognesa: Picar la cebolla menuda y los ajos y rallar la zanahoria.
 }
 \step{3.}{
 Pochalarlo en una sartén, cuando este pochado añadir los tomates y freir un poco.
