--- a/postres/tartamanzana.tex
+++ b/postres/tartamanzana.tex
@@ -21,13 +21,17 @@ Raciones: 4 personas
 Batir los huevos con el azúcar
  hasta obtener una pasta suave
  y esponjosa. Añadir poco a poco
- la ralladura y el zumo de limón,
+ la ralladura, el zumo de limón,
  y la mantequilla derretida, incorporar
- la levadura y mezclar todo bien .Pelar
- las manzanas y cortarlas en cuñas finas.
+ la levadura y mezclar todo bien.
+}
+\step{2.}{
+ Pelar las manzanas y cortarlas en cuñas finas.
  Colocarlas en una tartera engrasada con
- mantequilla y enharinada, verter encima
- la masa e introducir en el horno precalentado
+ mantequilla y enharinada.
+ }
+ \step{3.}{
+ Verter encima la masa e introducir en el horno precalentado
  a 180ºC, durante 30 minutos. Terminada la
  cocción, desmoldar la tarta sobre una fuente
  de servir. Espolvorear la tarta con el azúcar
