--- a/mariscos/cigala.tex
+++ b/mariscos/cigala.tex
@@ -18,9 +18,11 @@
 \recipesection{Realizacion}
 
 \step{1.}{
-Se abren las cigalas, se espolvorean el  ajo picado,
-el perejil picado, un chorro de aceite y sal.
-Se coloca en una bandeja de horno con la parte abierta
+Se abren las cigalas con una tijerita y se espolvorean con el ajo y prejil
+picado, un chorro de aceite y sal.
+}
+\step{2.}{
+Se colocan en una bandeja de horno con la parte abierta
 hacia arriba y se meten en el horno a media altura con el
-grill hasta que se doren.
+grill puesto hasta que se doren los ajos.
 }
